--- a/style.css
+++ b/style.css
@@ -20,23 +20,27 @@
     width: 100%;
     cursor: pointer;
     transition: 1s;
-    transform: translate(-30px);
+    transform: scale(1.1);
 }
 .exp{
     float:left;
     width: 25%;
     margin-left: 5%;
     style="text-align:center;"
+
 }
 .exp img{
     width: 100%;
     cursor: pointer;
+    transition: 1s;
 }
 .exp img:hover{
     width: 100%;
     cursor: pointer;
     transition: .5s;
-    transform: translate(-20px);
+    transform: scale(1.2);
+    box-shadow:2px 2px 35px black;
+
 }
 section{
     height: 500px;
@@ -45,14 +49,22 @@ section{
 .client{
     padding-bottom: 40px;
 }
-#client{
-    background-color: hotpink;
-    
-    width: fit-content;
-    padding: 10px 20px;
-    margin-left: 40%;
-    border-radius: 5px;
+.d-button{
+   margin-top:2 rem ;
+}
+.d-button-inner {
     color: white;
+    padding: 1.5rem 5.3rem;
+    border: none;
+    border-radius: 10px;
+    background-image: linear-gradient(to right,blue,hotpink);
+}
+.d-button-inner h5 {
+    font-size: 12px;
+}
+
+.d-button-inner h4 {
+    font-size: 20px;
 }
 .name{
     color: hotpink;
@@ -63,7 +75,7 @@ section{
     text-decoration: none;
     padding: 10px 25px;
     border-radius: 5px;
-    background:linear-gradient(lightsalmon,orange);
+    background:linear-gradient(pink,blue);
     color: white;
     transition-timing-function: ease-in;
     margin: 10px 0px;
@@ -75,7 +87,7 @@ section{
 .btn:hover{
     text-decoration: none;
     padding: 10px 25px;
-    background:linear-gradient(orange,rgb(255, 106, 20));
+    background:linear-gradient(hotpink,green);
     transform: translate(-50px);
     color: white;
     margin: 10px;
