--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ section{
 }
 .d-button-inner {
     color: white;
-    padding: 1.5rem 5.3rem;
+    padding: 10px 20px;
     border: none;
     border-radius: 10px;
     background-image: linear-gradient(to right,blue,hotpink);
